# Make the Klamp't examples 
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4)
PROJECT(SparseTSDF2Mesh)

SET(KLAMPT_ROOT ../../Klampt CACHE PATH "Klampt root directory")
SET (CMAKE_MODULE_PATH "${KLAMPT_ROOT}/CMakeModules")
MESSAGE(STATUS "Looking for FindKlampt.cmake in ${CMAKE_MODULE_PATH}")
# COMPILER SETTINGS (default: Release) and flags
INCLUDE(CompilerSettings)
FIND_PACKAGE(Klampt REQUIRED)
ADD_DEFINITIONS(${KLAMPT_DEFINITIONS})
INCLUDE_DIRECTORIES(${KLAMPT_INCLUDE_DIRS})

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)

#IKDemo 
ADD_EXECUTABLE(SparseTSDF2Mesh main.cpp)
TARGET_LINK_LIBRARIES(SparseTSDF2Mesh ${KLAMPT_LIBRARIES})
ADD_DEPENDENCIES(SparseTSDF2Mesh Klampt)


